--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,7 +6,7 @@ tasks:
 
   - name: 'Terminal 2'
     init: npm install
-    command: ng serve
+    command: npm start
 
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
